# ML-Surowce-2

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  INSTRUKCJA_OBSLUGI.md  LICENSE  MODEL_SETUP_SUMMARY.md  OPTIMIZATION_ROADMAP.md  PROPOZYCJE_OPTYMALIZACJI.md  README_OPTIMIZATION.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  ai_supply_assistant.spec  build_exe.py  install.bat  main.py  pyproject.toml  readme.md  requirements.txt  run_app.bat  start_server.bat  test_output.txt  uninstall.bat  🗺️ Mapa Drogowa Optymalizacji AI S.md
.Jules/: palette.md
.streamlit/: config.toml
config/: app_settings.json  ml_config.json
docs/: inspekcja_kodu.md
logs/: audit_log.json
models/: DOWNLOAD_STATUS.md  MODEL_COMPARISON.md  comparison_results.txt
notebooks/: Produkcja.ipynb  demo_walkthrough.ipynb  prezentacja_akademicka.ipynb  test_qwen25_model.ipynb
scripts/: Install-AISupplyAssistant.ps1  Uninstall-AISupplyAssistant.ps1  analyze_th_zp.py  check_cols.py  check_cti_warehouse_config.py  check_technol.py  check_warehouse_schema.py  compare_models.py  create_indexes.py  debug_services.py  debug_types.py  export_demo_data.py  get_sql_port.py  get_top_products.py  inspect_alternatives.py  inspect_direct.py  inspect_schema.py  probe_openrouter_api.py  read_mcp_config.py  test_cdn.py  test_cti_integration.py  test_db.py  test_deepseek.py  test_forecasting_models.py  test_high_priority_fixes.py  test_llama_cpp.py  test_medium_priority_fixes.py  test_ml_enhancements.py  test_ml_pipeline.py  (+15 more)
(+56 files in other folders)
